# twitter-pipeline

./: .env  .gitignore  pyproject.toml
twitter_data_pipeline/: config.py  twitter_dag.py  twitter_etl.py
